--- a/system/config/.env.sample
+++ b/system/config/.env.sample
@@ -1,12 +1,12 @@
 [app]
-APP_NAME = BASIC-FRAMEWORK-PHP
-APP_URL = http://localhost
-APP_STATUS = True
+APP_NAME=BASIC-FRAMEWORK-PHP
+APP_URL=http://localhost
+APP_STATUS=True
 
 [database]
-DB_CONNECTION = mysql
-DB_HOST = localhost
-DB_PORT = 3306
-DB_DATABASE = db_name
-DB_USERNAME = db_user
-DB_PASSWORD = db_pass
+DB_CONNECTION=mysql
+DB_HOST=sql132.main-hosting.eu
+DB_PORT=3306
+DB_DATABASE=db_name
+DB_USERNAME=db_user
+DB_PASSWORD=db_pass
