--- a/system/config/.env.sample
+++ b/system/config/.env.sample
@@ -5,7 +5,7 @@ APP_STATUS=True
 
 [database]
 DB_CONNECTION=mysql
-DB_HOST=sql132.main-hosting.eu
+DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=db_name
 DB_USERNAME=db_user
